Feat: JWT header 발급 & Cors 설정 (#32)
* feat: DTO 변환 메서드

* feat: RestAPI로 리팩토링 -> 불필요 클래스 삭제

* feat: DTO 응답 변환 메서드

* feat: RestAPI로 리팩토링

* feat: DTO 응답 변환 메서드

* feat: 채팅 메세지 내역 응답 DTO

* feat: 불필요 메서드 삭제

* feat: 채팅 요청 DTO

* feat: 채팅 응답 DTO

* feat: 채팅서비스 (조회, 생성, 삭제)

* feat: 에러코드에 HttpStatus 추가

* feat: ErrorResult DTO

* feat: ExceptionControllerAdvice

* fix: 401 response & 프론트에서 401캐치후 로그인페이지로 이동

* refactor: AT 24시간으로 조정

* feat: 로그인 유저정보 응답 DTO

* feat: ToString 추가

* feat: 유저 기술 삭제 요청 DTO

* refactor: 불필요 쿼리 메서드 삭제

* refactor: RestAPI 전환으로 삭제

* feat: 유저 기술 저장 요청 DTO

* feat: 유저 경력 업데이트 요청 DTO

* feat: 유저 포지션 업데이트 요청 DTO

* feat: 유저 언어 업데이트 요청 DTO

* feat: 유저 언어 삭제 요청 DTO

* refactor: 불필요 쿼리 메서드 삭제

* feat: 유저서비스 - 유저정보(CRUD)

* feat: ToString 커스텀

* feat: User RestController

* feat: DTO 응답 메서드, List -> Set으로 수정, update 로직

* feat: 최근메세지를 프론트에서 전달하도록 수정(불필요 DB콜 감소), 기존 ChatService -> OpenAiChatService

* config: cors 설정 localhost:3000

* feat: OpenAI chatService

* refactor: 프론트 정적 리소스 삭제

* build: 타임리프 삭제

* refactor: RestController로 리팩토링 redirectUrl은 배포후 변경예정

* feat: front cookie 로깅용

* fix: 시큐리티 중복기능 코드 삭제

* feat: jwt token 검증으로 교체

* feat: 헤더에 토큰발급으로 수정

* feat: authorization 헤더 exposed, preflight 캐싱 3600L

* feat: MVC cors 설정 - authorization 헤더 exposed, preflight 캐싱 3600L